updated raw data handling

--- a/notebooks/YOLOv5_training.ipynb
+++ b/notebooks/YOLOv5_training.ipynb
@@ -53,25 +53,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "ModuleNotFoundError",
-     "evalue": "No module named 'wandb'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[3], line 2\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[38;5;66;03m# User-Defined Modules\u001b[39;00m\n\u001b[1;32m----> 2\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01msource\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mstages\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mdata_load\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m data_load\n",
-      "File \u001b[1;32mE:\\!VolaTeQ\\git\\new\\Yolov5_DVC_Pipeline\\source\\stages\\data_load.py:5\u001b[0m\n\u001b[0;32m      3\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mlogging\u001b[39;00m\n\u001b[0;32m      4\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mpathlib\u001b[39;00m\n\u001b[1;32m----> 5\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mwandb\u001b[39;00m\n\u001b[0;32m      6\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mrequests\u001b[39;00m\n\u001b[0;32m      7\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mtempfile\u001b[39;00m\n",
-      "\u001b[1;31mModuleNotFoundError\u001b[0m: No module named 'wandb'"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# User-Defined Modules\n",
-    "from source.stages.data_load import data_load\n"
+    "from source.stages.data_load import download, unzip\n"
    ]
   },
   {
@@ -101,9 +88,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'base': {'log_level': 'DEBUG', 'random_state': 42},\n",
+      " 'data_extract': {'features_path': 'data/extracted/labels',\n",
+      "                  'images_path': 'data/extracted/images',\n",
+      "                  'test_size': 0.3,\n",
+      "                  'testset_path': 'data/...',\n",
+      "                  'trainset_path': 'data/...'},\n",
+      " 'data_load': {'data_is_zip': True,\n",
+      "               'dataset_raw_path': 'data/raw/',\n",
+      "               'dataset_url': 'https://file.io/ory5xt7bLL4h'},\n",
+      " 'model': {'model_config': 'config/custom_coating_5.yaml',\n",
+      "           'model_type': 'yolov5m'},\n",
+      " 'reports': {'confusion_matrix_image': 'reports/confusion_matrix.png',\n",
+      "             'metrics_file': 'reports/metrics.json'},\n",
+      " 'train': {'batch-size': 64, 'epochs': 200, 'img': 128}}\n"
+     ]
+    }
+   ],
    "source": [
     "# Read config\n",
     "\n",
